Add the form basic markup

--- a/index.html
+++ b/index.html
@@ -36,45 +36,45 @@
 			</section>
 			<!-- intro -->
 			<div class="background">
-			<section class="hero">
-				<header class="intro">
-					<div>
-						<h1 class="primary-text"
-						    id="primary">Hey there. I’m Jared 
+				<section class="hero">
+					<header class="intro">
+						<div>
+							<h1 class="primary-text"
+							    id="primary">Hey there. I’m Jared 
+						</div>
+						<div>
+							<h1 class="primary-text" id="career">I’m a software
+								developer</h1>
+						</div>
+					</header>
+
+					<!-- Support text -->
+					<header class="support-text">
+						<div>
+							<h1 id="support-text"> I can help you build
+								a product , feature or website Look
+								through some of my work and experience! If
+								you like what you see and have a project
+								you need coded, 
+								don’t hestiate to contact me.</h1>
+
+						</div>
+					</header>
+
+					<nav class="social">
+						<ul id="social-icons">
+
+							<li><a class="fa" href="#" target="_blank"><img src="images/twitter.svg" alt="twitter"/></a></li>
+							<li><a class="fa"  href="#" target="_blank"><img src="images/linkedin-icon.svg" alt="Linkedin"/></a></li>
+							<li><a class="fa"  href="#" target="_blank"><img src="images/medium.svg" alt="medium"/></a></li>
+							<li><a class="fa"  href="#" target="_blank"><img src="images/github.svg" alt="github"/></a></li>
+							<li><a class="fa"  href="#" target="_blank"><img src="images/angellist.svg" alt="angellist"/></a></li>
+						</ul>
+					</nav>
+					<div class="scroll-down"> 
+						<img id="scroll-img" src="images/Disabled.svg" alt="scroll-down"/>
 					</div>
-					<div>
-						<h1 class="primary-text" id="career">I’m a software
-							developer</h1>
-					</div>
-				</header>
-
-				<!-- Support text -->
-				<header class="support-text">
-					<div>
-						<h1 id="support-text"> I can help you build
-							a product , feature or website Look
-							through some of my work and experience! If
-							you like what you see and have a project
-							you need coded, 
-							don’t hestiate to contact me.</h1>
-
-					</div>
-				</header>
-
-				<nav class="social">
-					<ul id="social-icons">
-
-						<li><a class="fa" href="#" target="_blank"><img src="images/twitter.svg" alt="twitter"/></a></li>
-						<li><a class="fa"  href="#" target="_blank"><img src="images/linkedin-icon.svg" alt="Linkedin"/></a></li>
-						<li><a class="fa"  href="#" target="_blank"><img src="images/medium.svg" alt="medium"/></a></li>
-						<li><a class="fa"  href="#" target="_blank"><img src="images/github.svg" alt="github"/></a></li>
-						<li><a class="fa"  href="#" target="_blank"><img src="images/angellist.svg" alt="angellist"/></a></li>
-					</ul>
-				</nav>
-				<div class="scroll-down"> 
-					<img id="scroll-img" src="images/Disabled.svg" alt="scroll-down"/>
-				</div>
-			</section>
+				</section>
 			</div>
 		</section>
 		<section class="about-me">
@@ -99,23 +99,23 @@
 							<ul class="languages">
 								<li>
 									<a href="#">
-								<button id="ruby">Ruby on rails</button>
-								</a>
+										<button id="ruby">Ruby on rails</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">Javascript</button>
-								</a>
+										<button id="ruby">Javascript</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">css</button>
-								</a>
+										<button id="ruby">css</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">html</button>
-								</a>
+										<button id="ruby">html</button>
+									</a>
 								</li>
 							</ul>
 
@@ -125,7 +125,7 @@
 						</div>
 					</div>
 				</div>
-		
+
 				<!---Card 2-->
 				<div class="card">
 					<div class="abt-me-img">
@@ -137,23 +137,23 @@
 							<ul class="languages">
 								<li>
 									<a href="#">
-								<button id="ruby">Ruby on rails</button>
-								</a>
+										<button id="ruby">Ruby on rails</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">Javascript</button>
-								</a>
+										<button id="ruby">Javascript</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">css</button>
-								</a>
+										<button id="ruby">css</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">html</button>
-								</a>
+										<button id="ruby">html</button>
+									</a>
 								</li>
 							</ul>
 
@@ -175,23 +175,23 @@
 							<ul class="languages">
 								<li>
 									<a href="#">
-								<button id="ruby">Ruby on rails</button>
-								</a>
+										<button id="ruby">Ruby on rails</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">Javascript</button>
-								</a>
+										<button id="ruby">Javascript</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">css</button>
-								</a>
+										<button id="ruby">css</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">html</button>
-								</a>
+										<button id="ruby">html</button>
+									</a>
 								</li>
 							</ul>
 
@@ -215,23 +215,23 @@
 							<ul class="languages">
 								<li>
 									<a href="#">
-								<button id="ruby">Ruby on rails</button>
-								</a>
+										<button id="ruby">Ruby on rails</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">Javascript</button>
-								</a>
+										<button id="ruby">Javascript</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">css</button>
-								</a>
+										<button id="ruby">css</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">html</button>
-								</a>
+										<button id="ruby">html</button>
+									</a>
 								</li>
 							</ul>
 
@@ -254,23 +254,23 @@
 							<ul class="languages">
 								<li>
 									<a href="#">
-								<button id="ruby">Ruby on rails</button>
-								</a>
+										<button id="ruby">Ruby on rails</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">Javascript</button>
-								</a>
+										<button id="ruby">Javascript</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">css</button>
-								</a>
+										<button id="ruby">css</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">html</button>
-								</a>
+										<button id="ruby">html</button>
+									</a>
 								</li>
 							</ul>
 
@@ -292,23 +292,23 @@
 							<ul class="languages">
 								<li>
 									<a href="#">
-								<button id="ruby">Ruby on rails</button>
-								</a>
+										<button id="ruby">Ruby on rails</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">Javascript</button>
-								</a>
+										<button id="ruby">Javascript</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">css</button>
-								</a>
+										<button id="ruby">css</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">html</button>
-								</a>
+										<button id="ruby">html</button>
+									</a>
 								</li>
 							</ul>
 
@@ -324,19 +324,19 @@
 
 		<!--About me section-->
 		<section class="about-me-sec">
-		<div class="background-1">
+			<div class="background-1">
 				<img src="images/illustration 1- about me-mobile.svg" alt="background">
 			</div>
 
 			<!-- about me content -->
-	    <div class="description">
+			<div class="description">
 				<div class="me">
 					<div class="me-title">
 						<h1>About me</h1>
 					</div>
 					<div class="me-des">
-					<h1 id="me-des">
-						I can help you build a product, <br> feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+						<h1 id="me-des">
+							I can help you build a product, <br> feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
 							don’t hestiate to contact me.
 						</h1>
 					</div>
@@ -344,146 +344,162 @@
 						<a href="#" class="resume-btn"> Get My Resume </a>
 					</div>
 				</div>
-			<div class="background-2">
-				<img src="images/illustration 2-about me mobile.svg" alt="background">
-			</div>
-
-		<div class="portfolio">
-
-			<!-- about-me-card  1 -->
-			<div class="about-me-cards">
-				<div class="icon-languages">
-					<img src="images/icon-languages.svg" alt="languages">
+				<div class="background-2">
+					<img src="images/illustration 2-about me mobile.svg" alt="background">
 				</div>
-				<div>
-					<h1>
-						Languages
-					</h1>
-				</div>
+
+				<div class="portfolio">
+
+					<!-- about-me-card  1 -->
+					<div class="about-me-cards">
+						<div class="icon-languages">
+							<img src="images/icon-languages.svg" alt="languages">
+						</div>
+						<div>
+							<h1>
+								Languages
+							</h1>
+						</div>
 						<div class="abt-frameworks">
 							<ul class="abt-languages">
 								<li>
 									<a href="#">
-								<button id="ruby">Javascript</button>
-								</a>
+										<button id="ruby">Javascript</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">Ruby</button>
-								</a>
+										<button id="ruby">Ruby</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">css</button>
-								</a>
+										<button id="ruby">css</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">html</button>
-								</a>
+										<button id="ruby">html</button>
+									</a>
 								</li>
 							</ul>
 
 						</div>
-			</div>
+					</div>
 
-			<!-- about-me-card  2 -->
-			<div class="about-me-cards">
-				<div class="icon-languages">
-					<img src="images/icon-frameworks-2.svg" alt="languages">
-				</div>
-				<div>
-					<h1>
-					    Frameworks	
-					</h1>
-				</div>
+					<!-- about-me-card  2 -->
+					<div class="about-me-cards">
+						<div class="icon-languages">
+							<img src="images/icon-frameworks-2.svg" alt="languages">
+						</div>
+						<div>
+							<h1>
+								Frameworks	
+							</h1>
+						</div>
 						<div class="abt-frameworks">
 							<ul class="abt-languages">
 								<li>
 									<a href="#">
-								<button id="ruby">Bootstrap</button>
-								</a>
+										<button id="ruby">Bootstrap</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">Ruby on rails</button>
-								</a>
+										<button id="ruby">Ruby on rails</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">RSpec</button>
-								</a>
+										<button id="ruby">RSpec</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">Capybara</button>
-								</a>
+										<button id="ruby">Capybara</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">Selenium</button>
-								</a>
+										<button id="ruby">Selenium</button>
+									</a>
 								</li>
 							</ul>
 
 						</div>
-			</div>
+					</div>
 
-			<!-- about-me-card  3 -->
-			<div class="about-me-cards">
-				<div class="icon-languages">
-					<img src="images/icon-skills.svg" alt="languages">
-				</div>
-				<div>
-					<h1>
-					   Skills 
-					</h1>
-				</div>
+					<!-- about-me-card  3 -->
+					<div class="about-me-cards">
+						<div class="icon-languages">
+							<img src="images/icon-skills.svg" alt="languages">
+						</div>
+						<div>
+							<h1>
+								Skills 
+							</h1>
+						</div>
 						<div class="abt-frameworks">
 							<ul class="abt-languages">
 								<li>
 									<a href="#">
-								<button id="ruby">Codekit</button>
-								</a>
+										<button id="ruby">Codekit</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">GitHub</button>
-								</a>
+										<button id="ruby">GitHub</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">Codepen</button>
-								</a>
+										<button id="ruby">Codepen</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">GitLab</button>
-								</a>
+										<button id="ruby">GitLab</button>
+									</a>
 								</li>
 								<li>
 									<a href="#">
-								<button id="ruby">Terminal</button>
-								</a>
+										<button id="ruby">Terminal</button>
+									</a>
 								</li>
 							</ul>
 
 						</div>
-			</div>
+					</div>
 
-		</div>
-		</div>
+				</div>
+			</div>
 		</section>
 		<section>
-			<form class="form">
+			<div class="form-section">
 				<div> 
-					<h1 class="frm-txt">I'm always interested in hearing about new projects,
-						so if you'd like to chat please get in touch.</h1>
+					<p class="frm-txt">I'm always interested in hearing about new projects,
+					so if you'd like to chat please get in touch.</p>
 				</div>
+				<form action="https://formspree.io/f/xwkzwlne" method="POST" >
+					<input type="text" name="name" placeholder="Full Name">
+					<input type="email" name="email" placeholder="Email Address">
+					<textarea name="message">Email text here</textarea>
+					<button type="submit">Get in touch</button>
+				</form>
+				<nav class="social">
+					<ul id="social-icons">
+
+						<li><a class="fa" href="#" target="_blank"><img src="images/twitter.svg" alt="twitter"/></a></li>
+						<li><a class="fa"  href="#" target="_blank"><img src="images/linkedin-icon.svg" alt="Linkedin"/></a></li>
+						<li><a class="fa"  href="#" target="_blank"><img src="images/medium.svg" alt="medium"/></a></li>
+						<li><a class="fa"  href="#" target="_blank"><img src="images/github.svg" alt="github"/></a></li>
+						<li><a class="fa"  href="#" target="_blank"><img src="images/angellist.svg" alt="angellist"/></a></li>
+					</ul>
+				</nav>
 				<div>
-					
+					<p>jaredatandi07@gmail.com</p>
 				</div>
-			</form>
+			</div>
 		</section>
 	</body>
 </html>
