Add the background image

--- a/index.html
+++ b/index.html
@@ -499,6 +499,10 @@
 				<div>
 					<p>jaredatandi07@gmail.com</p>
 				</div>
+				<div>
+					<img src="images/Frame.svg" alt="Frame"/>
+					
+				</div>
 			</div>
 		</section>
 	</body>
