--- a/index.html
+++ b/index.html
@@ -477,8 +477,8 @@
 		<section>
 			<div class="form-section">
 				<div> 
-					<p class="frm-txt">I'm always interested in hearing about new projects,
-					so if you'd like to chat please get in touch.</p>
+					<h4 class="frm-txt">I'm always interested in hearing about new projects,
+					so if you'd like to chat please get in touch.</h4>
 				</div>
 				<form action="https://formspree.io/f/xwkzwlne" method="POST" >
 					<input type="text" name="name" placeholder="Full Name">
