Add class to form input for styling

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 		<!-- fa fa icon -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
 		<!-- stylesheet -->
 		<link rel="stylesheet" href="css/style.css">
@@ -481,9 +484,9 @@
 					so if you'd like to chat please get in touch.</h4>
 				</div>
 				<form action="https://formspree.io/f/xwkzwlne" method="POST" >
-					<input type="text" name="name" placeholder="Full Name">
-					<input type="email" name="email" placeholder="Email Address">
-					<textarea name="message">Email text here</textarea>
+					<input class="form-input" type="text" name="name" placeholder="Full Name">
+					<input class="form-input" type="email" name="email" placeholder="Email Address">
+					<textarea class="form-input" name="message">Email text here</textarea>
 					<button type="submit">Get in touch</button>
 				</form>
 				<nav class="social">
