Update the textarea placeholder

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 				<form action="https://formspree.io/f/xwkzwlne" method="POST" >
 					<input class="form-input" type="text" name="name" placeholder="Full Name">
 					<input class="form-input" type="email" name="email" placeholder="Email Address">
-					<textarea class="form-input" name="message">Email text here</textarea>
+					<textarea class="form-input form-input2" name="message" placeholder="Email text here"></textarea>
 					<button type="submit">Get in touch</button>
 				</form>
 				<nav class="social">
