Style the background image for the forms section

--- a/index.html
+++ b/index.html
@@ -480,15 +480,19 @@
 		<section>
 			<div class="form-section">
 				<div> 
-					<h4 class="frm-txt">I'm always interested in hearing about new projects,
-					so if you'd like to chat please get in touch.</h4>
+					<h1 class="frm-txt">I'm always interested in hearing about new projects,
+					so if you'd like to chat please get in touch.</h1>
 				</div>
 				<form action="https://formspree.io/f/xwkzwlne" method="POST" >
 					<input class="form-input" type="text" name="name" placeholder="Full Name">
 					<input class="form-input" type="email" name="email" placeholder="Email Address">
-					<textarea class="form-input form-input2" name="message" placeholder="Email text here"></textarea>
+					<textarea class="form-input form-input2" name="message" placeholder="Enter text here"></textarea>
 					<button  type="submit">Get in touch</button>
 				</form>
+				<div class="form-img">
+					<img src="images/Frame.svg" alt="Frame"/>
+					
+				</div>
 				<nav class="social">
 					<ul id="social-icons">
 
@@ -499,12 +503,8 @@
 						<li><a class="fa"  href="#" target="_blank"><img src="images/angellist.svg" alt="angellist"/></a></li>
 					</ul>
 				</nav>
-				<div>
+				<div class="email-contact">
 					<p>jaredatandi07@gmail.com</p>
-				</div>
-				<div>
-					<img src="images/Frame.svg" alt="Frame"/>
-					
 				</div>
 			</div>
 		</section>
