Mark all fields in the forms as required

--- a/index.html
+++ b/index.html
@@ -484,9 +484,9 @@
 					so if you'd like to chat please get in touch.</h1>
 				</div>
 				<form action="https://formspree.io/f/xwkzwlne" method="POST" >
-					<input class="form-input" type="text" name="name" placeholder="Full Name">
-					<input class="form-input" type="email" name="email" placeholder="Email Address">
-					<textarea class="form-input form-input2" name="message" placeholder="Enter text here"></textarea>
+					<input class="form-input" type="text" name="name" placeholder="Full Name" maxlength="30" required>
+					<input class="form-input" type="email" name="email" placeholder="Email Address" required>
+					<textarea class="form-input form-input2" name="message" placeholder="Enter text here" maxlength="500" required></textarea>
 					<button  type="submit">Get in touch</button>
 				</form>
 				<div class="form-img">
