--- a/index.html
+++ b/index.html
@@ -480,8 +480,8 @@
 		<section>
 			<div class="form-section">
 				<div> 
-					<h1 class="frm-txt">I'm always interested in hearing about new projects,
-					so if you'd like to chat please get in touch.</h1>
+					<h2 class="frm-txt">I'm always interested in hearing about new projects,
+					so if you'd like to chat please get in touch.</h2>
 				</div>
 				<form action="https://formspree.io/f/xwkzwlne" method="POST" >
 					<input class="form-input" type="text" name="name" placeholder="Full Name" maxlength="30" required>
@@ -493,7 +493,7 @@
 					<img src="images/Frame.svg" alt="Frame"/>
 					
 				</div>
-				<nav class="social">
+				<footer class="social">
 					<ul id="social-icons">
 
 						<li><a class="fa" href="#" target="_blank"><img src="images/twitter.svg" alt="twitter"/></a></li>
@@ -502,7 +502,7 @@
 						<li><a class="fa"  href="#" target="_blank"><img src="images/github.svg" alt="github"/></a></li>
 						<li><a class="fa"  href="#" target="_blank"><img src="images/angellist.svg" alt="angellist"/></a></li>
 					</ul>
-				</nav>
+				</footer>
 				<div class="email-contact">
 					<p>jaredatandi07@gmail.com</p>
 				</div>
