--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
 	</head>
 	<body>
 		<section class="container">
-			<section>
+			<header>
+				<nav class='menu'>
+   				<ul>
+   					 <li><a href='#'>Portfolio</a></li>
+   					 <li><a href='#'>About</a></li>
+    				<li><a href='#'>Contact</a></li>
+  				</ul>
+				</nav>
 				<!-- navbar -->
 				<nav class="nav-bar">
 					<div>
@@ -36,7 +43,7 @@
 					</div>
 
 				</nav>
-			</section>
+			</header>
 			<!-- intro -->
 			<div class="background">
 				<section class="hero">
