Rename main headline tags and the primary text tag

--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
 					<header class="intro">
 						<div>
 							<h1 class="primary-text"
-							    id="primary">Hey there. I’m Jared 
+							    class="primary">Hey there. I’m Jared 
 						</div>
 						<div>
-							<h1 class="primary-text" id="career">I’m a software
+							<h1 class="primary-text career">I’m a software
 								developer</h1>
 						</div>
 					</header>
 
 					<!-- Support text -->
-					<header class="support-text">
+					<header class="support">
 						<div>
-							<h1 id="support-text"> I can help you build
+							<h1 class="support-text"> I can help you build
 								a product , feature or website Look
 								through some of my work and experience! If
 								you like what you see and have a project
@@ -72,17 +72,17 @@
 					</header>
 
 					<nav class="social">
-						<ul id="social-icons">
+						<ul class="social-icons">
 
 							<li><a class="fa" href="#" target="_blank"><img src="images/twitter.svg" alt="twitter"/></a></li>
 							<li><a class="fa"  href="#" target="_blank"><img src="images/linkedin-icon.svg" alt="Linkedin"/></a></li>
-							<li><a class="fa"  href="#" target="_blank"><img src="images/medium.svg" alt="medium"/></a></li>
+							<li><a class="fa medium"  href="#" target="_blank"><img src="images/medium.svg" alt="medium"/></a></li>
 							<li><a class="fa"  href="#" target="_blank"><img src="images/github.svg" alt="github"/></a></li>
 							<li><a class="fa"  href="#" target="_blank"><img src="images/angellist.svg" alt="angellist"/></a></li>
 						</ul>
 					</nav>
 					<div class="scroll-down"> 
-						<img id="scroll-img" src="images/Disabled.svg" alt="scroll-down"/>
+						<img class="scroll-img" src="images/Disabled.svg" alt="scroll-down"/>
 					</div>
 				</section>
 			</div>
@@ -92,7 +92,7 @@
 				<div>
 					<h1 class="about-me-text">My Recent Works</h1>
 				</div>
-				<div>
+				<div class="about-me-img">
 					<img src="images/Indicator.svg" alt="scroll-button"/>	
 				</div>
 			</div>
