--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<header class="intro">
 						<div>
 							<h1 class="primary-text"
-							    class="primary">Hey there. I’m Jared 
+							    class="primary">Hey there. I’m Jared.
 						</div>
 						<div>
 							<h1 class="primary-text career">I’m a software
