Rename the header section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								a product , feature or website Look
 								through some of my work and experience! If
 								you like what you see and have a project
-								you need coded, 
+								you need coded,<br> 
 								don’t hestiate to contact me.</h1>
 
 						</div>
@@ -87,12 +87,12 @@
 				</section>
 			</div>
 		</section>
-		<section class="about-me">
-			<div class="about-me-title">
+		<section class="recent-works">
+			<div class="recent-works-heading">
 				<div>
-					<h1 class="about-me-text">My Recent Works</h1>
+					<h1 class="recent-works-title">My Recent Works</h1>
 				</div>
-				<div class="about-me-img">
+				<div class="rcnt-work-indicator">
 					<img src="images/Indicator.svg" alt="scroll-button"/>	
 				</div>
 			</div>
@@ -100,10 +100,12 @@
 
 				<!---Card 1-->
 				<div class="card">
-					<div class="abt-me-img">
+					<div class="card-img">
 						<img src="images/comp.png" alt=""/>
 					</div>
+					<div class="card-title">
 					<h1>Multi-Post Stories Gain+Glory</h1>
+					</div>
 					<div class="text">
 						<div class="framework">
 							<ul class="languages">
@@ -138,10 +140,12 @@
 
 				<!---Card 2-->
 				<div class="card">
-					<div class="abt-me-img">
+					<div class="card-img">
 						<img src="images/comp.png" alt=""/>
 					</div>
+					<div class="card-title">
 					<h1>Multi-Post Stories Gain+Glory</h1>
+					</div>
 					<div class="text">
 						<div class="framework">
 							<ul class="languages">
@@ -176,10 +180,12 @@
 
 				<!---Card 3-->
 				<div class="card">
-					<div class="abt-me-img">
+					<div class="card-img">
 						<img src="images/comp.png" alt=""/>
 					</div>
-					<h1>Multi-Post Stories Gain+Glory</h1>
+					<div class="card-title">
+						<h1>Multi-Post Stories Gain+Glory</h1>
+					</div>
 					<div class="text">
 						<div class="framework">
 							<ul class="languages">
@@ -212,53 +218,16 @@
 					</div>
 				</div>
 
-
-
-				<!---Card 3-->
-				<div class="card">
-					<div class="abt-me-img">
-						<img src="images/comp.png" alt=""/>
-					</div>
-					<h1>Multi-Post Stories Gain+Glory</h1>
-					<div class="text">
-						<div class="framework">
-							<ul class="languages">
-								<li>
-									<a href="#">
-										<button id="ruby">Ruby on rails</button>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<button id="ruby">Javascript</button>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<button id="ruby">css</button>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<button id="ruby">html</button>
-									</a>
-								</li>
-							</ul>
-
-						</div>
-						<div class="see-prj">
-							<button>See Project</button>
-						</div>
-					</div>
-				</div>
 
 
 				<!---Card 4-->
 				<div class="card">
-					<div class="abt-me-img">
+					<div class="card-img">
 						<img src="images/comp.png" alt=""/>
 					</div>
-					<h1>Multi-Post Stories Gain+Glory</h1>
+					<div class="card-title">
+						<h1>Multi-Post Stories Gain+Glory</h1>
+					</div>
 					<div class="text">
 						<div class="framework">
 							<ul class="languages">
@@ -291,12 +260,55 @@
 					</div>
 				</div>
 
+
 				<!---Card 5-->
 				<div class="card">
-					<div class="abt-me-img">
+					<div class="card-img">
 						<img src="images/comp.png" alt=""/>
 					</div>
-					<h1>Multi-Post Stories Gain+Glory</h1>
+					<div class="card-title">
+						<h1>Multi-Post Stories Gain+Glory</h1>
+					</div>
+					<div class="text">
+						<div class="framework">
+							<ul class="languages">
+								<li>
+									<a href="#">
+										<button id="ruby">Ruby on rails</button>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<button id="ruby">Javascript</button>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<button id="ruby">css</button>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<button id="ruby">html</button>
+									</a>
+								</li>
+							</ul>
+
+						</div>
+						<div class="see-prj">
+							<button>See Project</button>
+						</div>
+					</div>
+				</div>
+
+				<!---Card 6-->
+				<div class="card">
+					<div class="card-img">
+						<img src="images/comp.png" alt=""/>
+					</div>
+					<div class="card-title">
+						<h1>Multi-Post Stories Gain+Glory</h1>
+					</div>
 					<div class="text">
 						<div class="framework">
 							<ul class="languages">
