Style the Get my resume button

--- a/index.html
+++ b/index.html
@@ -357,12 +357,12 @@
 						<h1>About me</h1>
 					</div>
 					<div class="me-des">
-						<h1 id="me-des">
-							I can help you build a product, <br> feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+						<h1 class="me-des">
+							I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
 							don’t hestiate to contact me.
 						</h1>
 					</div>
-					<div>
+					<div class="btn-rsm">
 						<a href="#" class="resume-btn"> Get My Resume </a>
 					</div>
 				</div>
