--- a/index.html
+++ b/index.html
@@ -502,19 +502,23 @@
 					<h2 class="frm-txt">I'm always interested in hearing about new projects,
 					so if you'd like to chat please get in touch.</h2>
 				</div>
-				<form action="https://formspree.io/f/xwkzwlne" method="POST" >
-					<input class="form-input" type="text" name="name" placeholder="Full Name" maxlength="30" required>
-					<input class="form-input" type="email" name="email" placeholder="Email Address" required>
-					<textarea class="form-input form-input2" name="message" placeholder="Enter text here" maxlength="500" required></textarea>
+				<form class="form-inputs" action="https://formspree.io/f/xwkzwlne" method="POST" >
+					<input class="form-input name" type="text" name="name" placeholder="Full Name" maxlength="30" required>
+					<input class="form-input email" type="email" name="email" placeholder="Email Address" required>
+					<textarea class="form-input form-input2 message" name="message" placeholder="Enter text here" maxlength="500" required></textarea>
 					<button  type="submit">Get in touch</button>
 				</form>
 				<div class="form-img">
 					<img src="images/Frame.svg" alt="Frame"/>
 					
 				</div>
+				<div class="email-contact">
+					<p>jaredatandi07@gmail.com</p>
+				</div>
+			</div>
+		</section>
 				<footer class="social">
 					<ul id="social-icons">
-
 						<li><a class="fa" href="#" target="_blank"><img src="images/twitter.svg" alt="twitter"/></a></li>
 						<li><a class="fa"  href="#" target="_blank"><img src="images/linkedin-icon.svg" alt="Linkedin"/></a></li>
 						<li><a class="fa"  href="#" target="_blank"><img src="images/medium.svg" alt="medium"/></a></li>
@@ -522,10 +526,5 @@
 						<li><a class="fa"  href="#" target="_blank"><img src="images/angellist.svg" alt="angellist"/></a></li>
 					</ul>
 				</footer>
-				<div class="email-contact">
-					<p>jaredatandi07@gmail.com</p>
-				</div>
-			</div>
-		</section>
 	</body>
 </html>
