Link the nav bar links to their sections

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 			<header>
 				<nav class='menu'>
    				<ul>
-   					 <li><a href='#'>Portfolio</a></li>
-   					 <li><a href='#'>About</a></li>
-    				<li><a href='#'>Contact</a></li>
+   					 <li><a href='#recent-works'>Portfolio</a></li>
+   					 <li><a href='#About-me'>About</a></li>
+    				<li><a href='#Contact'>Contact</a></li>
   				</ul>
 				</nav>
 				<!-- navbar -->
@@ -66,7 +66,7 @@
 								through some of my work and experience! If
 								you like what you see and have a project
 								you need coded,<br> 
-								don’t hestiate to contact me.</h1>
+								don’t hesitate to contact me.</h1>
 
 						</div>
 					</header>
@@ -87,7 +87,7 @@
 				</section>
 			</div>
 		</section>
-		<section class="recent-works">
+		<section class="recent-works" id="recent-works">
 			<div class="recent-works-heading">
 				<div>
 					<h1 class="recent-works-title">My Recent Works</h1>
@@ -345,7 +345,7 @@
 		</section>
 
 		<!--About me section-->
-		<section class="about-me-sec">
+		<section class="about-me-sec" id="About-me">
 			<div class="background-1">
 				<img src="images/illustration 1- about me-mobile.svg" alt="background">
 			</div>
@@ -359,7 +359,7 @@
 					<div class="me-des">
 						<h1 class="me-des">
 							I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-							don’t hestiate to contact me.
+							don’t hesitate to contact me.
 						</h1>
 					</div>
 					<div class="btn-rsm">
@@ -496,7 +496,7 @@
 				</div>
 			</div>
 		</section>
-		<section>
+		<section id="Contact">
 			<div class="form-section">
 				<div> 
 					<h2 class="frm-txt">I'm always interested in hearing about new projects,
