Add horizontal line at the footer

--- a/index.html
+++ b/index.html
@@ -510,15 +510,18 @@
 				</form>
 				<div class="form-img">
 					<img src="images/Frame.svg" alt="Frame"/>
-					
+				</div>
+				<div class="desktop-contact-illustration">
+
 				</div>
 				<div class="email-contact">
 					<p>jaredatandi07@gmail.com</p>
 				</div>
 			</div>
+			<hr class="line">
 		</section>
-				<footer class="social">
-					<ul id="social-icons">
+				<footer class="social" id="less">
+					<ul class="social-icons">
 						<li><a class="fa" href="#" target="_blank"><img src="images/twitter.svg" alt="twitter"/></a></li>
 						<li><a class="fa"  href="#" target="_blank"><img src="images/linkedin-icon.svg" alt="Linkedin"/></a></li>
 						<li><a class="fa"  href="#" target="_blank"><img src="images/medium.svg" alt="medium"/></a></li>
