Link scroll to bottom

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						</ul>
 					</nav>
 					<div class="scroll-down"> 
-						<img class="scroll-img" src="images/Disabled.svg" alt="scroll-down"/>
+						<a href="#less"><img class="scroll-img" src="images/Disabled.svg" alt="scroll-down"/></a>
 					</div>
 				</section>
 			</div>
@@ -511,14 +511,11 @@
 				<div class="form-img">
 					<img src="images/Frame.svg" alt="Frame"/>
 				</div>
-				<div class="desktop-contact-illustration">
-
-				</div>
 				<div class="email-contact">
 					<p>jaredatandi07@gmail.com</p>
 				</div>
 			</div>
-			<hr class="line">
+			<hr class="line" >
 		</section>
 				<footer class="social" id="less">
 					<ul class="social-icons">
