Add padding to the edges

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Jared Atandi</title>
 
 		<!-- favicon -->
@@ -73,12 +73,11 @@
 
 					<nav class="social">
 						<ul class="social-icons">
-
-							<li><a class="fa" href="#" target="_blank"><img src="images/twitter.svg" alt="twitter"/></a></li>
-							<li><a class="fa"  href="#" target="_blank"><img src="images/linkedin-icon.svg" alt="Linkedin"/></a></li>
-							<li><a class="fa medium"  href="#" target="_blank"><img src="images/medium.svg" alt="medium"/></a></li>
-							<li><a class="fa"  href="#" target="_blank"><img src="images/github.svg" alt="github"/></a></li>
-							<li><a class="fa"  href="#" target="_blank"><img src="images/angellist.svg" alt="angellist"/></a></li>
+							<li><a class="fa" href="https://twitter.com/one_good_man_" target="_blank"><img src="images/twitter.svg" alt="twitter"/></a></li>
+							<li><a class="fa"  href="https://www.linkedin.com/in/engineerjaredatandi/" target="_blank"><img src="images/linkedin-icon.svg" alt="Linkedin"/></a></li>
+							<li><a class="fa medium"  href="https://medium.com/@jaredatandi07" target="_blank"><img src="images/medium.svg" alt="medium"/></a></li>
+							<li><a class="fa"  href="https://github.com/jaredatandi" target="_blank"><img src="images/github.svg" alt="github"/></a></li>
+							<li><a class="fa"  href="https://angel.co/u/jared-atandi" target="_blank"><img src="images/angellist.svg" alt="angellist"/></a></li>
 						</ul>
 					</nav>
 					<div class="scroll-down"> 
@@ -504,9 +503,13 @@
 					so if you'd like to chat please get in touch.</h2>
 				</div>
 				<form class="form-inputs" action="https://formspree.io/f/xwkzwlne" method="POST" >
+					<label class="no-visible" for="name"></label>
 					<input class="form-input name" type="text" name="name" placeholder="Full Name" maxlength="30" required>
+					<label class="no-visible" for="email"></label>
 					<input class="form-input email" type="email" name="email" placeholder="Email Address" required>
+					<label class="no-visible" for="textarea"></label>
 					<textarea class="form-input form-input2 message" name="message" placeholder="Enter text here" maxlength="500" required></textarea>
+					<label class="no-visible" for="submit"></label>
 					<button  type="submit">Get in touch</button>
 				</form>
 				<div class="form-img">
@@ -520,11 +523,11 @@
 		</section>
 				<footer class="social" id="less">
 					<ul class="social-icons">
-						<li><a class="fa" href="#" target="_blank"><img src="images/twitter.svg" alt="twitter"/></a></li>
-						<li><a class="fa"  href="#" target="_blank"><img src="images/linkedin-icon.svg" alt="Linkedin"/></a></li>
-						<li><a class="fa"  href="#" target="_blank"><img src="images/medium.svg" alt="medium"/></a></li>
-						<li><a class="fa"  href="#" target="_blank"><img src="images/github.svg" alt="github"/></a></li>
-						<li><a class="fa"  href="#" target="_blank"><img src="images/angellist.svg" alt="angellist"/></a></li>
+						<li><a class="fa" href="https://twitter.com/one_good_man_" target="_blank"><img src="images/twitter.svg" alt="twitter"/></a></li>
+						<li><a class="fa"  href="https://www.linkedin.com/in/engineerjaredatandi/" target="_blank"><img src="images/linkedin-icon.svg" alt="Linkedin"/></a></li>
+						<li><a class="fa"  href="https://medium.com/@jaredatandi07k" target="_blank"><img src="images/medium.svg" alt="medium"/></a></li>
+						<li><a class="fa"  href="https://github.com/jaredatandi" target="_blank"><img src="images/github.svg" alt="github"/></a></li>
+						<li><a class="fa"  href="https://angel.co/u/jared-atandi" target="_blank"><img src="images/angellist.svg" alt="angellist"/></a></li>
 					</ul>
 				</footer>
 	</body>
