Fix broken links

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
           </div>
           <ul class="navbar-links">
             <li><a class="menu-item" href="#recent-works">portfolio</a></li>
-            <li><a class="menu-item" href="#about-me">about</a></li>
-            <li><a class="menu-item" href="#contact">contact</a></li>
+            <li><a class="menu-item" href="#About">about</a></li>
+            <li><a class="menu-item" href="#Contact">contact</a></li>
           </ul>
         </nav>
       </header>
@@ -394,7 +394,7 @@
     </section>
 
     <!--About me section-->
-    <section class="about-me-sec" id="About-me">
+    <section class="about-me-sec" id="About">
       <div class="background-1">
         <img
           src="images/illustration 1- about me-mobile.svg"
