Disable hamburger menu visibility on the desktop version

--- a/index.html
+++ b/index.html
@@ -59,23 +59,27 @@
     />
   </head>
   <body>
-    <header>
-      <nav class="menu">
-        <div>
-          <h1 class="welcome">Welcome</h1>
-        </div>
-        <div class="ham-menu pop-up">
-          <img class="show-menu" src="images/ham.svg" alt="navigation button" />
-          <img class="x-icon" src="./images/x-icon.svg" alt="close-icon" />
-        </div>
-        <ul class="navbar-links">
-          <li><a class="menu-item" href="#recent-works">Portfolio</a></li>
-          <li><a class="menu-item" href="#About">About</a></li>
-          <li><a class="menu-item" href="#Contact">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
     <section class="container">
+      <header>
+        <nav class="menu">
+          <div>
+            <h1 class="welcome">Welcome</h1>
+          </div>
+          <div class="ham-menu pop-up">
+            <img
+              class="show-menu"
+              src="images/ham.svg"
+              alt="navigation button"
+            />
+            <img class="x-icon" src="./images/x-icon.svg" alt="close-icon" />
+          </div>
+          <ul class="navbar-links">
+            <li><a class="menu-item" href="#recent-works">Portfolio</a></li>
+            <li><a class="menu-item" href="#About">About</a></li>
+            <li><a class="menu-item" href="#Contact">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
       <!-- intro -->
       <div class="background">
         <section class="hero">
