Improve page title description for readability

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Jared Atandi</title>
+    <title>Jared Atandi Portfolio</title>
 
     <!-- favicon -->
     <link
